# singer-tap-woo

./: .gitignore  .pre-commit-config.yaml  README.md  config.sample.json  meltano.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
tap_woo/: __init__.py  client.py  streams.py  tap.py
tap_woo/helpers/: common_fields.py
tests/: __init__.py  test_core.py
